# tmpvakhrameev

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
fastapi_app/: database.py  main.py  models.py  schemas.py  test_main.py
fastapi_app/data/: test.db
